# imandra-starter-template

./: .gitignore  Makefile  README.md  dune-project  imandra-starter-template.opam
src-iml/: dune
src-ocaml/: bindings.ml  dune  main.ml  main_python.ml
src-python/: test.py
src-python/wrapper/: __init__.py
test-vgs/: dune  main.ml
