opam-version: "2.0"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "-p" name "@doc"] {with-doc}
]
depends: [
  "dune" {build}
  "alcotest" {with-test}
  "imandra-prelude"
  "imandra-base-bin" # provides imandra-extract
  "imandra-client"
  "imandra-client-bin" # provides imandra_client
  "imandra-network" # provides imandra_network_client
]
